--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+/SpringBoot-vue/
+.idea/workspace.xml
+test_springboot/src/main/resources/static/
+test_springboot/src/main/resources/templates/
